--- a/src/resources/default.css
+++ b/src/resources/default.css
@@ -2,25 +2,25 @@
     -fx-font-size: 14pt;
     -fx-font-family: "Courier New";
     -fx-base: rgb(132, 145, 47);
-    -fx-background: rgb(225, 228, 203);
+    -fx-background: rgb(100, 208, 150);
 }
 
 .button {
-    -fx-text-fill: #006464;
+    -fx-text-fill: #006666;
     -fx-background-color: #DFB951;
-    -fx-border-radius: 20;
+    -fx-border-radius: 100;
     -fx-background-radius: 20;
     -fx-padding: 8;
 }
 
 .button:hover {
-    -fx-background-color: #3a3a3a;
+    -fx-background-color: #333333;
 }
 
 .combo-box-base {
-    -fx-text-base-color: #006464;
+    -fx-text-base-color: #001111;
     -fx-background-color: #DFB951;
-    -fx-border-radius: 20;
+    -fx-border-radius: 65;
     -fx-background-radius: 20;
 }
 .combo-box-base:hover {
